      - Added depends on libdpkg-perl
      - Reduced dpkg-dev to a suggests, we can use libdpkg-perl as
        fallback.
      - Explicitly depends on bzip2 to always support bz2 source packages.
      - Added xz-utils as suggests - needed for .xz source packages.

  * frontend/lintian:
    + [NT] Allow some options to be put into the lintianrc file.
      (Closes: #460350)

  * lib/Lintian/Tags.pm:
    + [NT] Fixed a flaw in logic that gave incorrect results for
      architecture dependent overrides.  Thanks to Andreas Beckmann for
      the report and the patch.  (Closes: #626587)

  * unpack/list-srcpkg:
    + [ADB] Don't rely on the order of fields in the Sources file.  The
      files produced by the Debian archive no longer follow the order
      which the code previously assumed, and we shouldn't assume that
      the order won't change again in the future.  (Closes: #626597)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 13 May 2011 20:20:51 +0100

lintian (2.5.0) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - duplicate-files
      - format-3.0-but-debian-changes-patch
      - extended-description-contains-empty-paragraph
      - git-patches-not-exported

  * checks/binaries:
    + [NT] Fixed false-positive embedded-library.  Lintian incorrectly
      assumed that none of these binary packages would contain a source
      version in their source field.  (Closes: #626038)
  * checks/copyright-file.desc:
    + [ADB] Correct a spelling mistake ("coypright" -> "copyright") in the
      description of copyright-refers-to-deprecated-bsd-license-file;
      thanks, Kees Cook.  (Closes: #623780)
  * checks/description{,.desc}:
    + [NT] Check for empty paragraphs in extended description.  Thanks to
      Gerfried Fuchs for the patch.
  * checks/duplicate-files{,.desc}:
    + [NT] Added to check for duplicate files in usr/share/doc.  Thanks to
      Axel Beckert for the suggestion.  (Closes: #614715)
  * check/fields: