@@ -554,7 +554,7 @@ sub test_package {
     msg_print "testing... ";
     my $opts = { err => "$rundir/tags.$pkg", fail => 'never' };
     my $status;
-    unshift(@options, '--allow-root');
+    unshift(@options, '--allow-root', '--no-cfg');
     if ($testdata->{sort}) {
 	$status = spawn($opts, [ $LINTIAN, @options, $file ], '|', [ 'sort' ]);
     } else {
@@ -674,7 +674,7 @@ sub test_changes {
     my $testdir = "$TESTSET/changes";
 
     msg_print "testing... ";
-    runsystem_ok("$LINTIAN --allow-root -I -E $testdir/$test.changes 2>&1"
+    runsystem_ok("$LINTIAN --allow-root --no-cfg -I -E $testdir/$test.changes 2>&1"
 		 . " | sort > $RUNDIR/tags.changes-$test");
 
     # Compare the output to the expected tags.
@@ -739,7 +739,7 @@ sub test_deb {
     runsystem("cd $targetdir && fakeroot make >../build.$test 2>&1");
 
     msg_print "testing... ";
-    runsystem_ok("$LINTIAN --allow-root -I -E $targetdir/$test.deb 2>&1"
+    runsystem_ok("$LINTIAN --allow-root --no-cfg -I -E $targetdir/$test.deb 2>&1"
 		 . " | sort > $RUNDIR/tags.$test");
 
     # Compare the output to the expected tags.
@@ -803,7 +803,7 @@ sub test_source {
     runsystem("cd $targetdir && make >../build.$test 2>&1");
 
     msg_print "testing... ";
-    runsystem_ok("$LINTIAN --allow-root -I -E $targetdir/*.dsc 2>&1"
+    runsystem_ok("$LINTIAN --allow-root --no-cfg -I -E $targetdir/*.dsc 2>&1"
 		 . " | sort > $RUNDIR/tags.$test");
 
     # Compare the output to the expected tags.
