@@ -81,6 +81,8 @@ lintian (2.5.1) UNRELEASED; urgency=low
   * frontend/lintian:
     + [NT] Allow some options to be put into the lintianrc file.
       (Closes: #460350)
+    + [NT] Added --no-cfg option that can be specified if no config
+      file should be read.
 
   * lib/Lintian/Tags.pm:
     + [NT] Fixed a flaw in logic that gave incorrect results for
